--- a/src/app/publico/pagina-maestra/menu-lateral/menu-lateral.component.html
+++ b/src/app/publico/pagina-maestra/menu-lateral/menu-lateral.component.html
@@ -2,17 +2,15 @@
   <li>
     <div class="user-view">
       <div class="background">
-        <img src="">
+        <img src="https://materializecss.com/images/office.jpg" title="Image description">
       </div>
-      <a href="#user" title="User Profile"><img class="circle" src=""></a>
+      <a href="#user" title="User Profile"><img class="circle" src="https://materializecss.com/images/yuna.jpg" alt="User Profile"></a>
       <a href="#name"><span class="name">John Doe</span></a>
       <a href="#email"><span class="email">jdandtu&#64;gmail.com</span></a>
     </div>
   </li>
-  <li><a href="#!"><i class="material-icons">cloud</i>First Link With Icon</a></li>
-  <li><a href="#!">Second Link</a></li>
-  <li><div class="divider"></div></li>
-  <li><a class="subheader">Subheader</a></li>
-  <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+  <li *ngIf="let m of listaMenus">
+    <a routerLink="{{ m.ruta }}">{{ m.texto }}</a>
+  </li>
 </ul>
 <a href="#" data-target="slide-out" class="sidenav-trigger"><i class="material-icons">menu</i></a>
