--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,9 +2,9 @@
 
 </app-encabezado>
 
-<router-outlet>
-
-</router-outlet> 
+<div class="container">
+    <router-outlet> </router-outlet> 
+</div>
 
 <app-pie-pagina>
 
