--- a/src/app/modulos/seguridad/recuperar-clave/recuperar-clave.component.html
+++ b/src/app/modulos/seguridad/recuperar-clave/recuperar-clave.component.html
@@ -1,18 +1,22 @@
 <div id="login-page" class="row">
     <div class="col s12 z-depth-6 card-panel">
-        <form>
+        <form [formGroup]="fGroup" class="login-page">
             <div class="row">
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix">mail_outline</i>
-                    <input class="validate" id="email" type="email">
+                    <input formControlName="usuario" class="validate" id="email" type="email">
                     <label for="email" data-error="wrong" data-success="rigth">Usuario</label>
                 </div>
+                <div class="show-errors" *ngIf="ObtenerFormGrop['usuario'].errors
+                    && (ObtenerFormGrop['usuario'].dirty || ObtenerFormGrop['usuario'].touched)">
+                    <strong>Este campo es obligatorio y debe tener un formato de correo electroóico</strong>
+                    </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <a href="#" class="btn waves-effect Waves-ligth col s12">Recuperar</a>
+                    <button type="button" (click)="RecuperarClave" class="btn waves-effect Waves-ligth col s12">Recuperar</button>
                 </div>
             </div>  
         </form>
