--- a/src/app/modulos/parametros/producto/listar-producto/listar-producto.component.html
+++ b/src/app/modulos/parametros/producto/listar-producto/listar-producto.component.html
@@ -11,7 +11,7 @@
     </thead>
 
     <tbody>
-      <tr *ngIf="let r of listaRegistros">
+      <tr *ngFor="let r of listaRegistros | paginate: { itemsPerPage: registrosPorPagina, currentPage: pag, totalItems: total}">
         <td>{{ r.nombre }}</td>
         <td>{{ r.precioVenta }}</td>
         <td>{{ r.cantidadDisponible }}</td>
@@ -20,6 +20,7 @@
             <a routerLink="/parametros/producto-editar/{{r.id}}" class="btn orange">Editar Registro</a>&nbsp;
             <a routerLink="/parametros/producto-eliminar" class="btn redr">Eliminar Registro</a>
         </td>
+      </tr>
     </tbody>
   </table>
         
