--- a/src/app/modulos/seguridad/resgistro-publico-usuarios/resgistro-publico-usuarios.component.html
+++ b/src/app/modulos/seguridad/resgistro-publico-usuarios/resgistro-publico-usuarios.component.html
@@ -31,7 +31,7 @@
     <div class="row">
       <div class="input-field col s12">
         <button class="btn waves-effect Waves-ligth" type="button" (click)="Registrarse()">Registarse</button>
-        <i class="material-icons rigth">Send</i>
+        <i class="material-icons rigth"></i>
       </div>
     </div>
   </form>
