--- a/src/app/publico/inicio/inicio.component.html
+++ b/src/app/publico/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col s12 m7">
+    <div *ngFor="let r of listaRegistros" class="col s12 m7">
       <div class="card">
         <div class="card-image">
           <img src="https://materializecss.com/images/sample-1.jpg" alt="Sample Image">
